frontend/test/should_fail/index_multiple_edge_fromto_argument4_mismatch.grg
#using "index_multiple_model.gm"

rule i {
	if{ edgesFromIndexMultipleFromTo(E1j, 0, 1, Ei, 42, 42.0).size() > 0; }
	
	modify {
	}
}
